--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "todo",
   "version": "0.1.0",
   "private": true,
-  "homepage": "{gitRepositoryUrl}",
+  "homepage": "http://abhishek98as.github.io/Todo_list",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
